tests/snapshots/examples_fixtures/type_classes__CustomHandledTracerExample__App__Main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/CustomHandledTracerExample/App/Main.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `CustomHandledTracerExample.App.Main` doesn't match file path `examples/type_classes/CustomHandledTracerExample/App/Main.flx`.

  examples/type_classes/CustomHandledTracerExample/App/Main.flx:6:1
  |
6 | module CustomHandledTracerExample.App.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
